# OpenInterview

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
apps/api/: pyproject.toml  requirements-voice.txt
apps/api/eval/: scoring-report.json  scoring-report.md  scoring_seed.yaml
apps/api/openinterview_api/: __init__.py  auth.py  catalog.py  interview_engine.py  main.py  schemas.py  security.py  settings.py  storage.py  tracing.py
apps/api/openinterview_api/adapters/: __init__.py  asr.py  llm.py  tts.py
apps/api/openinterview_api/questions/: SOURCES.md  ai_application.yaml  ai_application_expanded.yaml  backend.yaml  backend_coverage_expanded.yaml  backend_infrastructure_advanced.yaml  cs_fundamentals.yaml  database_cache.yaml  distributed_backend.yaml  frontend.yaml  java_backend.yaml  java_ecosystem_advanced.yaml  javaguide_generated.yaml  system_design_scenarios.yaml
apps/api/openinterview_api/services/: __init__.py  coverage.py  duplex.py  errors.py  evaluation.py  local_diagnostics.py  metrics.py  provider_diagnostics.py  question_bank.py  readiness.py  realtime.py  resume.py  resume_file.py  review.py  session_store.py  voice_config.py
apps/api/openinterview_api/voice/: __init__.py  audio.py  cosyvoice_cli.py  cosyvoice_worker.py  local_asr.py  local_tts.py  local_vad.py  voice_profiles.py
apps/api/tests/: test_api.py  test_engine.py
configs/: providers.example.yaml  voice-models.local.example.yaml  voice-models.recommended.yaml  voice-profiles.example.yaml  voice-profiles.local.example.yaml
(+25 files in other folders)
